added delete function, sorting and adding images functionality

--- a/DreamListener/DreamListener/Info.plist
+++ b/DreamListener/DreamListener/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Select Image for item</string>
 </dict>
 </plist>
